<resources>
    <string name="app_name">MVDMART</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro_materias_primas"><u>REGISTROS DE MATERIA PRIMA</u></string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_select_area"><u>SELECCIÓN DE ÁREA DE TARBAJO</u></string>
    <string name="title_activity_identificacion_bolsas"><u>IDENTIFICACIÓN DE BOLSAS DE SANGRE</u></string>
    <string name="title_activity_separacion_suero"><u>REGISTROS DE SEPARACIÓN</u></string>
    <string name="title_activity_main"><u>INGRESO A LA APLICACIÓN</u></string>
    <string-array name="condiciones_array">
        <item>ACEPTABLE</item>
        <item>DAÑO MENOR</item>
        <item>DAÑO MAYOR</item>
        <item>COLOR INACEPTABLE</item>
    </string-array>
    <string name="btnIngresar">INGRESAR</string>
    <string name="lblIngresar">Ingrese su número de operario</string>
    <string name="btnAgregar">AGREGAR</string>
    <string name="btnModificar">MODIFICAR</string>
    <string name="btnFinalizar">FINALIZAR</string>
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnSeleccionar">SELECCIONAR</string>
    <string name="btnCerrar">CERRAR</string>
    <string name="btnCerrada">ABRIR</string>
    <string name="btnCambiar">CAMBIAR</string>
    <string name="btnTirar">TIRAR</string>
    <string name="btnTirada">RECUPERAR</string>
    <string name="btnAgregarSuero">AGREGAR SUERO</string>
    <string name="btnAgregarMezcla">AGREGAR MEZCLA</string>
</resources>
