<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewPpal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="right">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.SeparacionSueroActivity"
        tools:showIn="@layout/activity_separacion_suero">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_separacion_suero"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="ITEM:"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8" />

        <TextView
            android:id="@+id/txtItemSeleccionado"
            android:layout_width="350dp"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <Button
            android:id="@+id/btn_rs_SeleccionarItem"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:background="@color/colorBtnSeleccionar"
            android:text="@string/btnSeleccionar"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="@+id/txtItemSeleccionado"
            app:layout_constraintStart_toEndOf="@+id/txtItemSeleccionado"
            app:layout_constraintTop_toTopOf="@+id/txtItemSeleccionado" />

        <Button
            android:id="@+id/btn_rs_TirarItem"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btnTirar"
            android:textColor="@color/colorBlanco"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_rs_SeleccionarItem"
            app:layout_constraintStart_toEndOf="@+id/btn_rs_SeleccionarItem"
            app:layout_constraintTop_toTopOf="@+id/btn_rs_SeleccionarItem" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="BOTELLA DE SUERO:"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/txtBotellaSueroSeleccionada"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/textView12" />

        <Button
            android:id="@+id/btn_rs_SeleccionarBotellaSuero"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:background="@color/colorBtnSeleccionar"
            android:text="@string/btnSeleccionar"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="@+id/txtDisponibleParaLlenarSuero"
            app:layout_constraintStart_toEndOf="@+id/txtDisponibleParaLlenarSuero"
            app:layout_constraintTop_toTopOf="@+id/txtDisponibleParaLlenarSuero" />

        <TextView
            android:id="@+id/txtLabelDisponibleSuero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Disponible: "
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/txtBotellaSueroSeleccionada"
            app:layout_constraintStart_toEndOf="@+id/txtBotellaSueroSeleccionada"
            app:layout_constraintTop_toTopOf="@+id/txtBotellaSueroSeleccionada" />

        <TextView
            android:id="@+id/txtDisponibleParaLlenarSuero"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toBottomOf="@+id/txtLabelDisponibleSuero"
            app:layout_constraintStart_toEndOf="@+id/txtLabelDisponibleSuero"
            app:layout_constraintTop_toTopOf="@+id/txtLabelDisponibleSuero" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="BOTELLA DE MEZCLA:"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/txtBotellaMezclaSeleccionada"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintStart_toEndOf="@+id/textView14"
            app:layout_constraintTop_toTopOf="@+id/textView14" />

        <Button
            android:id="@+id/btn_rs_SeleccionarBotellaMezcla"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="232dp"
            android:background="@color/colorBtnSeleccionar"
            android:text="@string/btnSeleccionar"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="@+id/txtBotellaMezclaSeleccionada"
            app:layout_constraintStart_toEndOf="@+id/txtBotellaMezclaSeleccionada"
            app:layout_constraintTop_toTopOf="@+id/txtBotellaMezclaSeleccionada" />

        <Button
            android:id="@+id/btn_rs_CerrarBotellaMezcla"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btnCerrar"
            android:textColor="@color/colorBlanco"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_rs_SeleccionarBotellaMezcla"
            app:layout_constraintStart_toEndOf="@+id/btn_rs_SeleccionarBotellaMezcla"
            app:layout_constraintTop_toTopOf="@+id/btn_rs_SeleccionarBotellaMezcla" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="216dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:text="Cantidad de suero:"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <EditText
            android:id="@+id/txtCantidadSueroExtraido"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mL"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintBottom_toBottomOf="@+id/txtCantidadSueroExtraido"
            app:layout_constraintStart_toEndOf="@+id/txtCantidadSueroExtraido"
            app:layout_constraintTop_toTopOf="@+id/txtCantidadSueroExtraido" />

        <Button
            android:id="@+id/btn_rs_AgregarExtraccionSuero"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/colorBtnAgregar"
            android:text="@string/btnAgregarSuero"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintEnd_toStartOf="@+id/btn_rs_AgregarExtraccionMezcla"
            app:layout_constraintTop_toTopOf="@+id/textView19" />

        <!--<TextView-->
        <!--android:id="@+id/textView17"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginTop="24dp"-->
        <!--android:text="Agregar sobrante de mezcla"-->
        <!--android:textAppearance="@android:style/TextAppearance.Large"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/guideline10"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/btnAgregarExtraccionMezcla"-->
        <!--app:layout_constraintTop_toTopOf="@+id/guideline9" />-->

        <Button
            android:id="@+id/btn_rs_AgregarExtraccionMezcla"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="156dp"
            android:background="@color/colorBtnAgregar"
            android:text="@string/btnAgregarMezcla"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="@+id/btn_rs_AgregarExtraccionSuero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_rs_AgregarExtraccionSuero" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="275dp" />

        <TextView
            android:id="@+id/txtTituloTablaExtraccionesSuero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Extracciones de suero"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloTablaExtraccionesSuero" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="0dp"
            android:layout_height="320dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3">

            <TableLayout
                android:id="@+id/tablaExtraccionesSuero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:isScrollContainer="true"
                android:orientation="horizontal"
                android:stretchColumns="*"></TableLayout>

        </android.support.v4.widget.NestedScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloTablaExtraccionesMezcla" />

        <TextView
            android:id="@+id/txtTituloTablaExtraccionesMezcla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Extracciones de mezcla"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView2" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollView3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <TableLayout
                android:id="@+id/tablaExtraccionesMezcla"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:isScrollContainer="true"
                android:orientation="horizontal"
                android:stretchColumns="*"></TableLayout>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_rs_Finalizar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorBtnFinalizar"
            android:text="@string/btnFinalizar"
            android:textColor="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_rs_Cancelar"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView3" />

        <Button
            android:id="@+id/btn_rs_Cancelar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnCancelar"
            android:text="@string/btnCancelar"
            android:textColor="@color/colorBlanco"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_rs_Finalizar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView3" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>